# compps_simulations

./: .gitignore  Makefile  README.md  pyproject.toml
config/: __init__.py  parameter_sets.md  parameters.py  theory.md
notebooks/: amplification_factor.ipynb  sandbox.ipynb
scripts/: generate_parameter_doc.py  plot_xcm_grid.py  run_ktbb_study.py  run_rel_refl_study.py  run_simulation.py  run_tau_kTe_study.py
src/: __init__.py  analysis.py  fitter.py  grid_study_common.py  plot_settings.py  plotting.py  simulator.py  utils.py  xcm_plotter.py  xspec_interface.py
tests/: __init__.py  test_negative_tau_y.py
