[tool.poetry]
name = "compps-simulations"
version = "0.1.0"
description = "A package to simulate spectra based on CompPS model to check if it is possible to get low photone indeces after fitting them with absorbed power law model"
authors = ["Miсhael Belvedersky <mike.belveder@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.5"
matplotlib = "^3.10.7"
pandas = "^2.3.3"
astropy = "^7.1.1"
ipykernel = "^7.1.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
hypothesis = "^6.148.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
